Fix spacing on words

--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,28 @@ body {
     display: flex;
     flex-direction:column;
     align-items: center;
+    margin: 0px;
+    padding: 0px;
+    border: 5px;
 }
-
+h1 {
+    font-size: 100px;
+    border: 0px;
+    padding: 0px;
+    border: 0px;
+    line-height: 2px;
+}
+p {
+    border: 0px;
+    padding: 0px;
+    border: 0px;
+}
+h4 {
+    border: 0px;
+    padding: 0px;
+    border: 0px;
+    line-height: 0px;
+}
 .gridBorder {
     display: flex;
     flex-direction: column;
@@ -14,7 +34,6 @@ body {
     height: 970px;
     width: 970px;
 }
-
 #grid {
     display: flex;
     flex-direction: column;
